package ProtoBuf;  

message C2S_Login
{
	required int32 type = 1;  // 0 注册  1 登录
	required string username = 2;
	required string password = 3;
}
message S2C_Login
{
	required int32 ret = 1;  // 0 1 2
	required string uid = 2; //用户uid
	required string code = 3; //加密字段
}