import "Dat_HeroData.proto";

package ProtoBuf;  

message C2S_NewHero
{

}
message S2C_NewHero
{
	required int32 ret = 1;
	required DAT_HeroData hero = 2;

}